# we-remember

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md  issue.md
.github/workflows/: ci.yml
apps/health/: views.py
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
docs/brainstorms/: 2026-06-02-repo-governance-scaffold-requirements.md
docs/plans/: 2026-06-02-001-chore-repo-governance-scaffold-plan.md
docs/setup/: github-ruleset.md  labels.sh
tests/: test_config.py  test_health.py  test_pytest_config.py
