[project]
name = "we-remember"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "django==5.2.*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
addopts = "-p conftest"
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["."]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
